[BXMA-2022] RHR styling when page loads fix (#1054)
* jumpy RHR styling fix when page loads

* fixed overlapping mrec and image

* Added min height and width to the mrec container - pr

--- a/src/app/styles/components/social/_social.scss
+++ b/src/app/styles/components/social/_social.scss
@@ -20,8 +20,10 @@
     }
 
     .ad--section-mrec {
-        margin-left: -5px;
+        margin-left: 35px;
         margin-bottom: 30px;
+        min-height: 250px;
+        min-width: 300px;
     }
 }
 
